--- a/app/src/main/res/layout/fg_modify_nickname.xml
+++ b/app/src/main/res/layout/fg_modify_nickname.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical" >
 
     <RelativeLayout
-        android:id="@+id/titlebar"
+        android:id="@+id/rLayoutTitleBar"
         android:layout_width="match_parent"
         android:layout_height="48dp"
         android:orientation="vertical" >
