--- a/app/src/main/res/layout/layout_menu_quickset.xml
+++ b/app/src/main/res/layout/layout_menu_quickset.xml
@@ -58,7 +58,7 @@
         android:textSize="12sp" />
 
     <TextView
-        android:id="@+id/share"
+        android:id="@+id/imgvShare"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
