--- a/app/src/main/res/layout/activity_add_efamily.xml
+++ b/app/src/main/res/layout/activity_add_efamily.xml
@@ -105,7 +105,7 @@
     </RelativeLayout>
 
     <ImageView
-        android:id="@+id/back"
+        android:id="@+id/imgvBack"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="15dp"
