--- a/app/src/main/res/layout/activity_doorbell_main.xml
+++ b/app/src/main/res/layout/activity_doorbell_main.xml
@@ -32,7 +32,7 @@
     </LinearLayout>
 
     <RelativeLayout
-        android:id="@+id/titlebar"
+        android:id="@+id/rLayoutTitleBar"
         android:layout_width="match_parent"
         android:layout_height="48dp"
         android:background="@drawable/doorbell_navbar"
