--- a/app/src/main/res/layout/activity_efamily.xml
+++ b/app/src/main/res/layout/activity_efamily.xml
@@ -53,7 +53,7 @@
 
 
     <RelativeLayout
-        android:id="@+id/titlebar"
+        android:id="@+id/rLayoutTitleBar"
         android:layout_width="match_parent"
         android:layout_height="48dp"
         android:orientation="vertical"
