--- a/app/src/main/res/layout/activity_histiory_video.xml
+++ b/app/src/main/res/layout/activity_histiory_video.xml
@@ -125,7 +125,7 @@
     </RelativeLayout>
 
     <TextView
-        android:id="@+id/time"
+        android:id="@+id/tvTime"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_above="@+id/hs_layout"
