--- a/app/src/main/res/layout/activity_messagedetail_pics.xml
+++ b/app/src/main/res/layout/activity_messagedetail_pics.xml
@@ -6,13 +6,13 @@
     android:orientation="vertical">
 
     <RelativeLayout
-        android:id="@+id/titlebar"
+        android:id="@+id/rLayoutTitleBar"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/bg_timeline_pic_detail_titlebar">
 
         <ImageView
-            android:id="@+id/back"
+            android:id="@+id/imgvBack"
             android:layout_width="wrap_content"
             android:layout_height="48dp"
             android:layout_centerVertical="true"
@@ -22,7 +22,7 @@
             android:src="@drawable/btn_return_selector" />
 
         <TextView
-            android:id="@+id/pic_cusor"
+            android:id="@+id/tvCursor"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
@@ -32,31 +32,29 @@
 
 
     <android.support.v4.view.ViewPager
-        android:id="@+id/viewpager"
+        android:id="@+id/vpContent"
         android:layout_width="fill_parent"
         android:layout_height="0dp"
         android:layout_weight="1" />
 
 
     <TextView
-        android:id="@+id/time"
+        android:id="@+id/tvTime"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/bg_timeline_pic_detail_bottom"
         android:gravity="center"
         android:textColor="@color/top_title_text_color"
-        android:textSize="@dimen/code_size"
-        android:visibility="gone" />
+        android:textSize="@dimen/code_size" />
 
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
         android:gravity="center"
-        >
+        android:orientation="horizontal">
 
         <ImageView
-            android:id="@+id/download"
+            android:id="@+id/imgvDownload"
             android:layout_width="60dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -65,7 +63,7 @@
             android:src="@drawable/btn_download_selector" />
 
         <ImageView
-            android:id="@+id/share"
+            android:id="@+id/imgvShare"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -76,7 +74,7 @@
 
 
         <ImageView
-            android:id="@+id/more"
+            android:id="@+id/imgvMore"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
