--- a/app/src/main/res/layout/fg_comment_webview.xml
+++ b/app/src/main/res/layout/fg_comment_webview.xml
@@ -12,7 +12,7 @@
         android:orientation="vertical" >
 
         <ImageView
-            android:id="@+id/back"
+            android:id="@+id/imgvBack"
             android:layout_width="wrap_content"
             android:layout_height="fill_parent"
             android:layout_centerVertical="true"
