--- a/app/src/main/res/layout/layout_doorbell_list_item.xml
+++ b/app/src/main/res/layout/layout_doorbell_list_item.xml
@@ -41,7 +41,7 @@
 
 
         <TextView
-            android:id="@+id/time"
+            android:id="@+id/tvTime"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
@@ -55,7 +55,7 @@
             android:id="@+id/sub"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/time"
+            android:layout_below="@id/tvTime"
             android:layout_marginTop="7dp"
             android:layout_toRightOf="@id/headpic"
             android:text="呼出，接近10分钟"
