--- a/app/src/main/res/layout/layout_efamily_left_video_call.xml
+++ b/app/src/main/res/layout/layout_efamily_left_video_call.xml
@@ -7,7 +7,7 @@
     android:paddingTop="19dp">
 
     <TextView
-        android:id="@+id/time"
+        android:id="@+id/tvTime"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
@@ -22,7 +22,7 @@
         android:id="@+id/headpic"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/time"
+        android:layout_below="@id/tvTime"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:src="@drawable/ico_efamily_ihome" />
@@ -31,7 +31,7 @@
         android:id="@+id/name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/time"
+        android:layout_below="@id/tvTime"
         android:layout_marginLeft="10dp"
         android:layout_toRightOf="@+id/headpic"
         android:text="视频通话"
