--- a/app/src/main/res/layout/layout_efamily_right_word.xml
+++ b/app/src/main/res/layout/layout_efamily_right_word.xml
@@ -7,7 +7,7 @@
     android:paddingTop="20dp">
 
     <TextView
-        android:id="@+id/time"
+        android:id="@+id/tvTime"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
@@ -23,7 +23,7 @@
         android:layout_width="34.5dp"
         android:layout_height="34.5dp"
         android:layout_alignParentRight="true"
-        android:layout_below="@id/time"
+        android:layout_below="@id/tvTime"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:src="@drawable/ico_efamily_user_default" />
@@ -32,7 +32,7 @@
         android:id="@+id/layout_word"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/time"
+        android:layout_below="@+id/tvTime"
         android:layout_toLeftOf="@+id/headpic"
         android:background="@drawable/bg_efamily_right"
         android:gravity="center_vertical"
@@ -62,7 +62,7 @@
         android:id="@+id/word_sending"
         android:layout_width="24dp"
         android:layout_height="24dp"
-        android:layout_below="@+id/time"
+        android:layout_below="@+id/tvTime"
         android:layout_marginRight="10dp"
         android:layout_marginTop="7dp"
         android:layout_toLeftOf="@+id/layout_word"
@@ -76,7 +76,7 @@
         android:id="@+id/word_sendfail"
         android:layout_width="40dp"
         android:layout_height="36dp"
-        android:layout_below="@+id/time"
+        android:layout_below="@+id/tvTime"
         android:layout_toLeftOf="@+id/layout_word"
         android:scaleType="center"
         android:src="@drawable/ico_send_failed"
@@ -87,7 +87,7 @@
         android:id="@+id/word_read"
         android:layout_width="wrap_content"
         android:layout_height="40dp"
-        android:layout_below="@+id/time"
+        android:layout_below="@+id/tvTime"
         android:layout_marginRight="10dp"
         android:layout_toLeftOf="@+id/layout_word"
         android:gravity="center_vertical"
