--- a/app/src/main/res/layout/activity_new_home.xml
+++ b/app/src/main/res/layout/activity_new_home.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     tools:context="com.cylan.jiafeigou.n.NewHomeActivity">
 
-    <android.support.v4.view.ViewPager
+    <com.cylan.jiafeigou.widget.CustomViewPager
         android:id="@+id/vp_home_content"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
