--- a/app/src/main/res/layout/fragment_home_page_list.xml
+++ b/app/src/main/res/layout/fragment_home_page_list.xml
@@ -1,15 +1,41 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <RelativeLayout
+        android:id="@+id/rLayout_home_top"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="list" />
+        android:layout_height="@dimen/y374"
+        android:background="#eee000">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:gravity="center_horizontal"
+            android:text="Hi xxx\n在这里开始美好的一天" />
+
+        <ImageButton
+            android:id="@+id/imgBtn_add_devices"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_marginBottom="13dp"
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="15dp"
+            android:layout_marginTop="13dp"
+            android:background="@drawable/add_circle" />
+    </RelativeLayout>
 
     <in.srain.cube.views.ptr.PtrClassicFrameLayout
         android:id="@+id/fLayout_main_content_holder"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-</FrameLayout>
+        android:layout_height="match_parent"
+        android:layout_below="@+id/rLayout_home_top">
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/rV_devices_list"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+    </in.srain.cube.views.ptr.PtrClassicFrameLayout>
+</RelativeLayout>
