--- a/app/src/main/res/layout/fragment_home_discovery.xml
+++ b/app/src/main/res/layout/fragment_home_discovery.xml
@@ -1,15 +1,18 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
-        android:layout_width="match_parent"
+        android:id="@+id/tv_home_discovery_title"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
+        android:layout_centerHorizontal="true"
         android:text="discovery" />
 
     <in.srain.cube.views.ptr.PtrClassicFrameLayout
         android:id="@+id/fLayout_main_content_holder"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-</FrameLayout>
+        android:layout_height="match_parent"
+        android:layout_below="@+id/tv_home_discovery_title" />
+</RelativeLayout>
