--- a/app/src/main/res/layout/activity_new_base.xml
+++ b/app/src/main/res/layout/activity_new_base.xml
@@ -7,6 +7,6 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.cylan.jiafeigou.n.base.NewBaseActivity">
+    tools:context="com.cylan.jiafeigou.n.view.activity.NewBaseActivity">
 
 </RelativeLayout>
