--- a/app/src/main/res/layout/layout_new_base_fragment.xml
+++ b/app/src/main/res/layout/layout_new_base_fragment.xml
@@ -1,42 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/rLayout_base_new_activity"
+    android:id="@+id/rLayout_base_fragment"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#eee000">
 
     <LinearLayout
         android:id="@+id/lLayout_base_title_bar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="80dp"
         android:orientation="horizontal">
 
         <TextView
             android:id="@+id/tv_base_title_back"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:layout_weight="1"
             android:gravity="center"
-            android:text="dfdafad" />
+            android:text="返回" />
 
         <TextView
             android:id="@+id/tv_base_title_title"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:layout_weight="1"
             android:gravity="center"
-            android:text="dfdafad" />
+            android:text="标题" />
 
         <TextView
             android:id="@+id/tv_base_title_done"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:layout_weight="1"
             android:gravity="center"
-            android:text="dfdafad" />
+            android:text="完成" />
     </LinearLayout>
 
-    <FrameLayout
-        android:id="@+id/fLayout_base_content"
+    <RelativeLayout
+        android:id="@+id/rLayout_base_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/lLayout_base_title_bar" />
