--- a/app/src/main/res/values/attr.xml
+++ b/app/src/main/res/values/attr.xml
@@ -78,4 +78,10 @@
         <attr name="showDot" format="boolean" />
         <attr name="tipDrawable" format="reference" />
     </declare-styleable>
+    <declare-styleable name="HomeMineItemViewStyle">
+        <attr name="leftDrawable" format="reference" />
+        <attr name="rightDrawable" format="reference" />
+        <attr name="textSize" format="dimension" />
+        <attr name="text" format="string" />
+    </declare-styleable>
 </resources>
