--- a/app/src/main/res/layout/fragment_home_mine.xml
+++ b/app/src/main/res/layout/fragment_home_mine.xml
@@ -1,5 +1,5 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:hunt="http://schemas.android.com/apk/res-auto"
+    xmlns:tim="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -8,14 +8,15 @@
         android:id="@+id/rLayout_home_mine_top"
         android:layout_width="match_parent"
         android:layout_height="@dimen/y374"
-        android:background="#000000">
+        android:background="#888888">
 
         <TextView
             android:id="@+id/tv_home_mine_portrait"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:drawableTop="@drawable/ico_default_headpic"
+            android:drawableTop="@drawable/ico_addvideo_cam"
+            android:textSize="16sp"
             android:gravity="center_horizontal"
             android:text="用户昵称" />
     </RelativeLayout>
@@ -27,37 +28,51 @@
         android:layout_alignParentRight="true"
         android:layout_margin="10dp"
         android:background="@drawable/add_circle"
-        hunt:Dradius="10dp"
-        hunt:showDot="true" />
+        tim:showDot="true" />
 
 
-    <ImageView
-        android:id="@+id/img_home_mine_dear_friend"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_below="@+id/rLayout_home_mine_top"
-        android:background="@drawable/ico_default_headpic" />
+        android:orientation="vertical">
 
-    <ImageView
-        android:id="@+id/img_home_mine_share_device"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/rLayout_home_mine_top"
-        android:layout_centerHorizontal="true"
-        android:background="@drawable/ico_default_headpic" />
+        <com.cylan.jiafeigou.widget.HomeMineItemView
+            android:id="@+id/home_mine_item_friend"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/y4"
+            tim:leftDrawable="@drawable/ico_device_ac"
+            tim:rightDrawable="@drawable/ico_device_set"
+            tim:text="亲朋好友" />
 
-    <ImageView
-        android:id="@+id/img_home_mine_help_feedback"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_below="@+id/rLayout_home_mine_top"
-        android:background="@drawable/ico_default_headpic" />
+        <com.cylan.jiafeigou.widget.HomeMineItemView
+            android:id="@+id/home_mine_item_share"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="4dp"
+            tim:leftDrawable="@drawable/ico_device_ac"
+            tim:rightDrawable="@drawable/ico_device_set"
+            tim:text="分享设备" />
 
-    <ImageView
-        android:id="@+id/img_home_mine_setting"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/img_home_mine_dear_friend"
-        android:background="@drawable/ico_default_headpic" />
+        <com.cylan.jiafeigou.widget.HomeMineItemView
+            android:id="@+id/home_mine_item_help"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="4dp"
+            tim:leftDrawable="@drawable/ico_device_ac"
+            tim:rightDrawable="@drawable/ico_device_set"
+            tim:text="帮助与反馈" />
+
+        <com.cylan.jiafeigou.widget.HomeMineItemView
+            android:id="@+id/home_mine_item_settings"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="4dp"
+            tim:leftDrawable="@drawable/ico_device_ac"
+            tim:rightDrawable="@drawable/ico_device_set"
+            tim:text="设置" />
+    </LinearLayout>
+
+
 </RelativeLayout>
