--- a/app/src/main/res/drawable/icon_bottom_clever_dog_selector.xml
+++ b/app/src/main/res/drawable/icon_bottom_clever_dog_selector.xml
@@ -2,7 +2,9 @@
 
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:state_pressed="true" android:color="@color/efamiy_msg_press" />
-    <item android:color="@color/efamily_msg_default" />
-
+    <item android:drawable="@drawable/icon_bottom_clever_dog_pressed" android:state_pressed="true" />
+    <item android:drawable="@drawable/icon_bottom_clever_dog_pressed" android:state_selected="true" />
+    <item android:drawable="@drawable/icon_bottom_clever_dog_pressed" android:state_focused="true" />
+    <item android:drawable="@drawable/icon_bottom_clever_dog_pressed" android:state_activated="true" />
+    <item android:drawable="@drawable/icon_bottom_clever_dog_normal" />
 </selector>
