--- a/app/src/main/res/layout/fragment_home_page_list_header.xml
+++ b/app/src/main/res/layout/fragment_home_page_list_header.xml
@@ -42,7 +42,7 @@
             android:layout_marginLeft="15dp"
             android:layout_marginRight="15dp"
             android:layout_marginTop="13dp"
-            android:background="@drawable/btn__common_add" />
+            android:background="@drawable/btn_common_add" />
 
     </RelativeLayout>
 
