--- a/app/src/main/res/layout/activity_new_home.xml
+++ b/app/src/main/res/layout/activity_new_home.xml
@@ -40,7 +40,7 @@
             android:paddingLeft="20dp"
             android:paddingRight="20dp"
             android:text="加菲狗"
-            android:textColor="#353c41"
+            android:textColor="@color/home_bottom_menu_text_color_selector"
             android:textSize="11sp" />
 
         <TextView
@@ -53,7 +53,7 @@
             android:paddingLeft="20dp"
             android:paddingRight="20dp"
             android:text="每日精彩"
-            android:textColor="#353c41"
+            android:textColor="@color/home_bottom_menu_text_color_selector"
             android:textSize="11sp" />
 
         <TextView
@@ -66,7 +66,7 @@
             android:paddingLeft="20dp"
             android:paddingRight="20dp"
             android:text="我的"
-            android:textColor="#353c41"
+            android:textColor="@color/home_bottom_menu_text_color_selector"
             android:textSize="11sp" />
     </RelativeLayout>
 </RelativeLayout>
