--- a/app/src/main/res/layout/layout_item_home_page_list.xml
+++ b/app/src/main/res/layout/layout_item_home_page_list.xml
@@ -4,7 +4,8 @@
     android:id="@+id/rLayout_device_item"
     android:layout_width="match_parent"
     android:layout_height="77dp"
-    android:background="@color/white">
+    android:background="?attr/selectableItemBackground"
+    android:clickable="true">
 
 
     <com.cylan.jiafeigou.widget.ImageViewTip
@@ -57,10 +58,10 @@
         android:textSize="14sp" />
 
     <TextView
-        android:layout_above="@+id/v_icon_base_line_bottom"
         android:id="@+id/tv_device_msg_time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_above="@+id/v_icon_base_line_bottom"
         android:layout_alignParentRight="true"
         android:layout_marginRight="15dp"
         android:layout_marginTop="15dp"
