--- a/app/src/main/res/color/home_bottom_menu_text_color_selector.xml
+++ b/app/src/main/res/color/home_bottom_menu_text_color_selector.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:color="@color/color_353c41" android:state_activated="true"/>
-    <item android:color="@color/color_929292" />
+    <item android:color="@color/color_353c41" android:state_checked="true" />
+    <item android:color="@color/color_929292" android:state_checked="false" />
 
 </selector>
