--- a/app/src/main/res/drawable/icon_bottom_clever_dog_selector.xml
+++ b/app/src/main/res/drawable/icon_bottom_clever_dog_selector.xml
@@ -2,9 +2,6 @@
 
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:drawable="@drawable/icon_bottom_clever_dog_pressed" android:state_pressed="true" />
-    <item android:drawable="@drawable/icon_bottom_clever_dog_pressed" android:state_selected="true" />
-    <item android:drawable="@drawable/icon_bottom_clever_dog_pressed" android:state_focused="true" />
-    <item android:drawable="@drawable/icon_bottom_clever_dog_pressed" android:state_activated="true" />
-    <item android:drawable="@drawable/icon_bottom_clever_dog_normal" />
+    <item android:drawable="@drawable/icon_bottom_clever_dog_pressed" android:state_checked="true" />
+    <item android:drawable="@drawable/icon_bottom_clever_dog_normal" android:state_checked="false" />
 </selector>
