--- a/app/src/main/res/layout/fragment_home_page_list.xml
+++ b/app/src/main/res/layout/fragment_home_page_list.xml
@@ -29,6 +29,8 @@
         android:layout_marginLeft="15dp"
         android:layout_marginRight="15dp"
         android:layout_marginTop="13dp"
-        android:background="@drawable/btn_common_add" />
+        android:background="@drawable/btn_common_add"
+        android:clickable="true"
+        android:padding="10dp" />
 
 </FrameLayout>
