--- a/app/src/main/res/layout/layout_home_mine_item.xml
+++ b/app/src/main/res/layout/layout_home_mine_item.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="?attr/selectableItemBackground"
+    android:clickable="true">
 
 
     <TextView
@@ -9,14 +11,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
-        android:drawableLeft="@drawable/icon_mine_friend"
-        android:textSize="15sp"
-        android:textColor="#333333"
-        android:drawablePadding="16dp"
-        android:gravity="center_vertical"
+        android:layout_marginBottom="16dp"
         android:layout_marginLeft="15dp"
         android:layout_marginTop="16dp"
-        android:layout_marginBottom="16dp" />
+        android:drawableLeft="@drawable/icon_mine_friend"
+        android:drawablePadding="16dp"
+        android:gravity="center_vertical"
+        android:textColor="#333333"
+        android:textSize="15sp" />
 
     <ImageView
         android:id="@+id/iv_home_mine_item_friend"
