--- a/app/src/main/res/layout/fragment_home_mine.xml
+++ b/app/src/main/res/layout/fragment_home_mine.xml
@@ -51,69 +51,71 @@
             android:layout_marginTop="20dp"
             android:src="@drawable/icon_mine_message" />
 
-
     </RelativeLayout>
 
-
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/rLayout_home_mine_top"
-        android:orientation="vertical">
+        android:layout_below="@+id/rLayout_home_mine_top">
 
-        <com.cylan.jiafeigou.widget.HomeMineItemView
-            android:id="@+id/home_mine_item_friend"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="60dp"
-            tim:leftDrawable="@drawable/icon_mine_friend"
-            tim:rightDrawable="@drawable/icon_mine_arrow_next"
-            tim:text="亲朋好友" />
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="#e8e8e8" />
+            <com.cylan.jiafeigou.widget.HomeMineItemView
+                android:id="@+id/home_mine_item_friend"
+                android:layout_width="match_parent"
+                android:layout_height="60dp"
+                tim:leftDrawable="@drawable/icon_mine_friend"
+                tim:rightDrawable="@drawable/icon_mine_arrow_next"
+                tim:text="亲朋好友" />
 
-        <com.cylan.jiafeigou.widget.HomeMineItemView
-            android:id="@+id/home_mine_item_share"
-            android:layout_width="match_parent"
-            android:layout_height="60dp"
-            tim:leftDrawable="@drawable/icon_mine_share"
-            tim:rightDrawable="@drawable/icon_mine_arrow_next"
-            tim:text="分享设备" />
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="#e8e8e8" />
 
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="#e8e8e8" />
+            <com.cylan.jiafeigou.widget.HomeMineItemView
+                android:id="@+id/home_mine_item_share"
+                android:layout_width="match_parent"
+                android:layout_height="60dp"
+                tim:leftDrawable="@drawable/icon_mine_share"
+                tim:rightDrawable="@drawable/icon_mine_arrow_next"
+                tim:text="分享设备" />
 
-        <com.cylan.jiafeigou.widget.HomeMineItemView
-            android:id="@+id/home_mine_item_help"
-            android:layout_width="match_parent"
-            android:layout_height="60dp"
-            tim:leftDrawable="@drawable/icon_mine_hlep"
-            tim:rightDrawable="@drawable/icon_mine_arrow_next"
-            tim:text="帮助与反馈" />
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="#e8e8e8" />
 
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="#e8e8e8" />
+            <com.cylan.jiafeigou.widget.HomeMineItemView
+                android:id="@+id/home_mine_item_help"
+                android:layout_width="match_parent"
+                android:layout_height="60dp"
+                tim:leftDrawable="@drawable/icon_mine_hlep"
+                tim:rightDrawable="@drawable/icon_mine_arrow_next"
+                tim:text="帮助与反馈" />
 
-        <com.cylan.jiafeigou.widget.HomeMineItemView
-            android:id="@+id/home_mine_item_settings"
-            android:layout_width="match_parent"
-            android:layout_height="60dp"
-            tim:leftDrawable="@drawable/icon_mine_setting"
-            tim:rightDrawable="@drawable/icon_mine_arrow_next"
-            tim:text="设置" />
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="#e8e8e8" />
 
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="#e8e8e8" />
+            <com.cylan.jiafeigou.widget.HomeMineItemView
+                android:id="@+id/home_mine_item_settings"
+                android:layout_width="match_parent"
+                android:layout_height="60dp"
+                tim:leftDrawable="@drawable/icon_mine_setting"
+                tim:rightDrawable="@drawable/icon_mine_arrow_next"
+                tim:text="设置" />
 
-    </LinearLayout>
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="#e8e8e8" />
 
+        </LinearLayout>
+    </ScrollView>
 
 </RelativeLayout>
